...
    <string name="meilleur_tour">Meilleur tour</string>
    <string name="meilleurs_joueurs">Meilleurs joueurs</string>
    <string name="mes_statistiques">Mes statistiques</string>
    <string name="modifier">Modifier</string>
    <string name="modifier_le_joueur">Modifier le joueur</string>
    <string name="modifier_le_profil">Modifier le profil</string>
    <string name="moi">Moi</string>
    <string name="mon_profil">Mon profil</string>
    <string name="nombre_de_des_count1">Nombre de dés : %1$d</string>
    <string name="nombre_de_des_invalide_0_a_5">Nombre de dés invalide (0 à 5).</string>
    <string name="nouvelle_fiche_avec_son_pseudo_et_son_avatar">Nouvelle fiche avec son pseudo et son avatar.</string>
    <string name="nemesis">Némésis</string>
    <string name="ok">OK</string>
...
